# ResumeMatchPro-core

./: .gitignore  .pre-commit-config.yaml  README.md  install_deps.bat  mypy.ini  py.typed  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: publish.yml
repositories/: __init__.py  jds_repository.py  models.py
scripts/: run_tests.py
shared/: exceptions.py
tests/: __init__.py  conftest.py
tests/repositories/: __init__.py  test_jds_repository.py
